# troikajs_public

./: LICENSE.txt  README.md
game/: ai_module.py  ai_user.py  main.py  text_colors.py  utils.py
mldata/: README.md
module/: CMakeLists.txt  build.sh  install.sh  learn_get_play_cards_ml.cpp  main.cpp  main.py  setup.py  test.cpp  test_ai_get_bid.cpp  test_ai_get_pass_cards.cpp  test_ai_get_play_cards.cpp  test_ai_get_trump.cpp  test_common.cpp  troika_ai.cpp  troika_ai_emscripten.cpp  troika_common.cpp  troika_common.hpp  troika_get_bid.cpp  troika_get_pass_cards.cpp  troika_get_play_cards.cpp  troika_get_play_cards_ml.cpp  troika_get_trump.cpp
modulejs/: CMakeLists.txt  build.py  setup.sh  update.sh
